--- a/index.html
+++ b/index.html
@@ -21,34 +21,6 @@
 
       <button>Play/Pause</button>
     </main>
-
-    <script>
-      
-
-      const video = document.querySelector("video");
-      const button = document.querySelector("button");
-
-      function MediaPlayer(config){
-        this.media = config.el
-      }
-      MediaPlayer.prototype.play = function () {
-        this.media.play();
-      }
-
-      MediaPlayer.prototype.stop = function () {
-        this.media.pause();
-      }
-
-      MediaPlayer.prototype.togglePlay = function () {
-        if (this.media.paused){
-          this.play();
-        }else{
-          this.stop();
-        }
-      }
-
-      const player = new MediaPlayer({el: video});
-      button.onclick = () => player.togglePlay();
-    </script>
+    <script type="module" src="./assets/index.js"></script>
   </body>
 </html>
