Uso de Closure (parte 1)

--- a/e/index.html
+++ b/e/index.html
@@ -9,6 +9,11 @@
 <body>
     <a href="/">Go back</a>
     <p><em>Indice</em></p>
-    <a href="scope.html">1. Scope</a>
+    <p>
+        <a href="scope.html">1. Scope</a>
+    </p>
+    <p>
+        <a href="closure.html">2. Closure</a>
+    </p>
 </body>
 </html>
