--- a/e/closure.html
+++ b/e/closure.html
@@ -33,6 +33,7 @@
         */
 
         //***Función que retorna otra función
+        /*
         function makeColorPrinter(color) {
             let colorMessage = `The color is ${color}`;
             return function () {
@@ -41,6 +42,32 @@
         }
         let greenColorPrinter = makeColorPrinter('green');
         console.log(greenColorPrinter());
+        */
+
+        //***Variables privadas
+        function makeCounter(n) {
+            let count = n;
+            return{
+                increase : function(){
+                    count++;
+                    return count;
+                },
+                decrease: function() {
+                    count--;
+                    return count;
+                },
+                getCount : function () {
+                    return count;
+                }
+            }
+        }
+
+        let counter = makeCounter(7);
+        console.log("The conunt is: " + counter.getCount());
+        console.log("The count increment: " + counter.increase());
+        console.log("The count increment: " + counter.increase());
+        console.log("The count decrement: " + counter.decrease());
+
 
     </script>
 </body>
