Uso de call/apply/bind

--- a/e/index.html
+++ b/e/index.html
@@ -18,6 +18,9 @@
     <p>
         <a href="this.html">3. this</a>
     </p>
+    <p>
+        <a href="call-apply-bind.html">3. call, apply, bind</a>
+    </p>
 
 </body>
 </html>
