Uso de prototype

--- a/e/index.html
+++ b/e/index.html
@@ -19,7 +19,10 @@
         <a href="this.html">3. this</a>
     </p>
     <p>
-        <a href="call-apply-bind.html">3. call, apply, bind</a>
+        <a href="call-apply-bind.html">4. call, apply, bind</a>
+    </p>
+    <p>
+        <a href="prototype.html">5. prototypes</a>
     </p>
 
 </body>
