Uso de herencia prototipal

--- a/e/index.html
+++ b/e/index.html
@@ -24,6 +24,9 @@
     <p>
         <a href="prototype.html">5. prototypes</a>
     </p>
+    <p>
+        <a href="herencia-prototipal.html">6. Herencia prototipal</a>
+    </p>
 
 </body>
 </html>
