Uso de promesas

--- a/e/index.html
+++ b/e/index.html
@@ -27,6 +27,9 @@
     <p>
         <a href="herencia-prototipal.html">6. Herencia prototipal</a>
     </p>
+    <p>
+        <a href="promesas.html">7. Promesas</a>
+    </p>
 
 </body>
 </html>
