--- a/e/index.html
+++ b/e/index.html
@@ -30,6 +30,10 @@
     <p>
         <a href="promesas.html">7. Promesas</a>
     </p>
+    <p>
+        <a href="proxy.html">8. Proxy</a>
+    </p>
+
 
 </body>
 </html>
