--- a/e/index.html
+++ b/e/index.html
@@ -33,6 +33,9 @@
     <p>
         <a href="proxy.html">8. Proxy</a>
     </p>
+    <p>
+        <a href="generadores.html">9. Generadores</a>
+    </p>
 
 
 </body>
